Updated id for email

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -6,7 +6,7 @@
     </div>
     <div class="user-text">
         <h2 id="profile-name" style="text-align: center;"><%= username %></h2>
-        <h2 id="profile-name" style="text-align: center;font-size:2.6rem;color:black;"><%= email %></h2>
+        <h2 id="email-name" style="text-align: center;font-size:2.6rem;color:black;"><%= email %></h2>
     </div>
   </div>
   <!-- Posts Liked -->
