add media query

--- a/views/resources.ejs
+++ b/views/resources.ejs
@@ -1,6 +1,23 @@
 <%- include("header") %>
 
+<style>
+  @media only screen and (max-width: 768px) {
+  .year{
+    flex-direction: column;
+  }
 
+  .form{
+    width: 60%;
+    min-width: 80px;
+    padding-right: 110px;
+  }
+.box1 img{
+  /* margin: 0 auto; */
+  padding-left: 110px;
+  /* text-align: center; */
+}
+}
+</style>
 <div id="container">
   <div id="wave">
     <h2 style="text-align:center;font-weight:1000;">E-RESOURCES</h2>
