update community cards  + add user public profile

--- a/public/css/firstyearresource.css
+++ b/public/css/firstyearresource.css
@@ -1,6 +1,6 @@
 
 .first-year-container{
-    border:14px solid #7510f7;
+    /* border:14px solid #7510f7; */
     margin-top:10px;
     margin-bottom: 100px;
     padding: 20px;
