--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,8 +64,8 @@
         </select>
       </div>
       <div class="field">
-        <label>Your Bio (nearly 70 characters)</label>
-        <input type="text" name="about" placeholder="Enter a short intro" required maxlength="70">
+        <label>Your Bio (a word or two describing you)</label>
+        <input type="text" name="about" placeholder="Enter a short intro" required maxlength="30">
       </div>
       <div class="field">
         <label>Github Handle</label>
@@ -118,6 +118,7 @@
 
   <!-- After-Loading Screen -->
   <div id="after-loading" style="display:none;">
+    
     <div id="home">
 
       <div id="homeText">
@@ -141,6 +142,7 @@
         <img src="images/jssconnectTop.png" style="width: 120%;" alt="top-img">
       </div>
     </div>
+
 
     <div id="section1" class="Box">
       <img src="/images/blog-section.svg" alt="fgfh">
