--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>JSS Connect</title>
+  <title><%= pageTitle %></title>
 
   <!-- You MUST include jQuery before Fomantic -->
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
@@ -130,7 +130,7 @@
         <i class="sidebar icon"></i>
       </a>
       <a href="/" class="logo">
-        <img src="images/logo.png" alt="logo" style="width: 60px;" />
+        <img src="/images/logo.png" alt="logo" style="width: 60px;" />
         <strong class="logoText" style="font-size: 1.5rem;">Jssconnect</strong>
       </a>
       <div class="right menu">
