--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -2,40 +2,102 @@
 
   <style>
 
-    #dottedBox {
-      border: 2px dotted;
-      margin: 30px auto;
-      margin-top: 45px;
-      padding: 30px 20px;
-      padding-bottom: 60px;
-      width: 75%;
-      position: relative;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    @media screen and (max-width: 1000px) {
-
-      #dottedBox {
-        flex-direction: column;
-        padding: 70px 20px;
-        width: 90%;
-      }
-
-    }
+   
   </style>
 </head>
 
 <body>
  
   <div id="dottedBox">
-      
+     <div class="first-section">
+       <!-- Community Section -->
+       <div class="one">
+         <!-- Top Section -->
+         <div class="top-section">
+           <h2 id="section-heading">COMMUNITY SECTION</h2>
+         </div>
+         <!--Mid Section -->
+         <div class="mid-section">
+           <div class="c1">
+             <h3>Total Community Users:<br><strong id="totalCommunityUsers"></strong></h3>
+           </div>
+           <hr />
+           <div class="c2" style="margin-bottom:50px;">
+             <h2 style="text-align: center;text-decoration: underline;border:4px solid red;padding:5px;">Our Community</h2>
+             <div style="border:2px dashed black;height:40px;"></div>
+             <button class="circle">1</button>
+             <div style="border:2px dashed black;height:40px;"></div>
+             <button class="circle">2</button>
+             <div style="border:2px dashed black;height:40px;"></div>
+             <button class="circle">3</button>
+             <div style="border:2px dashed black;height:40px;"></div>
+             <button class="circle">4</button>
+           </div>
+         </div>
+         <!-- Bottom Section -->
+         <div class="c3">
+           <h2 style="text-align: center;">Our Recent Join</h2>
+           <h3 id="recent-join" style="text-align:center;color:#5401f7;font-size:1.8rem;font-family:monospace;"></h3>
+         </div>
+       </div>
+       <!-- User Resource Section -->
+       <div class="two">
+        <div class="top-section">
+          <h2 id="section-heading">RESOURCE SECTION</h2>
+        </div>
+         <!--Mid Section -->
+         <div class="mid-section">
+         
+        </div>
+        <!-- Bottom Section -->
+       </div>
+     </div>
+     <div class="second-section"></div>
+     <!--User Resources-->
+     <!--User Blogs--> 
     
 
   </div>
-
-
+  <!--Modal -->
+  <div class="ui modal">
+    <i class="close icon"></i>
+    <div class="header">
+      Profile Picture
+    </div>
+    <div class="image content">
+      <div class="ui medium image" style="padding:5px;display:flex;align-items:center;justify-content:center;border:4px solid #5401f7;width:90px;height:90px;border-radius: 100%;">
+        <i class="fa fa-users" aria-hidden="true" style="font-size:2.3rem;"></i>
+        <h2 id="totalNumber" style="font-size:2rem;color:#5401f7;font-weight:1000;font-family: monospace;">0</h2>
+      </div>
+      <div class="description">
+       <div id="desc-one">
+       <div class="number-circle" id="totalF">12</div>
+       <h2>Total Members</h2>
+       <div class="number-circle" id="totalFCS" style="border:4px solid yellow;">12</div>
+       <h2>CS Members</h2>
+       <div class="number-circle" id="totalFIT" style="border:4px solid green;">12</div>
+       <h2>IT Members</h2>
+       </div>
+       <div id="desc-two">
+         <h2 style="text-align:center;border:2px solid #5401f7;background:black;color:#5401f7;">Community Feed Screen</h2>
+         <h3 style="text-align:center;">Recent Members</h3>
+         <div class="image-box"></div>
+       </div>
+       
+      </div>
+    </div>
+    <div class="actions">
+    <!--  <div class="ui black deny button">
+        Nope
+      </div>
+      <div class="ui positive right labeled icon button">
+        Yep, that's me
+        <i class="checkmark icon"></i>
+      </div>
+    -->
+     <div class="name-feed"></div>
+    </div>
+  </div>
   <!-- divs used for displaying messages passed on to ejs using res.render (rest is done below using jQuery) -->
   <div id="updateMessage" style="display:none"><%= message %></div>
 
@@ -56,7 +118,177 @@
           })
           ;
       }
+    /* CommunityUser Data Find */
+    const totalCommunityUsers = document.getElementById("totalCommunityUsers");
+    let firstYear = 0;
+    let secondYear = 0;
+    let thirdYear = 0;
+    let fourthYear = 0;
+    /* First Year Branch Variables */
+    let fCS=0;
+    let fIT=0;
+    let fEEE=0;
+    let fEE=0;
+    /* Second Year Branch Variables*/
+    let sCS=0;
+    let sIT=0;
+    let sEEE=0;
+    let sEE=0;
+    /* Third Year Branch Variables */
+    let tCS=0;
+    let tIT=0;
+    let tEEE=0;
+    let tEE=0;
+    /* fourth Year Branch Variables */
+    let frCS=0;
+    let frIT=0;
+    let frEEE=0;
+    let frEE=0;
+    /* Pictures for Feed Screen */
+    let fPicture=[];
+    let sPicture=[];
+    let tPicture=[];
+    let frPicture=[];
+    fCount=0;
+    /* Slider */
+    /* First Year */
+    let fSliderName=[];
+    /* Second Year */
+    let sSliderName=[];
+    /* third Year */
+    let tSliderName=[];
+    /* Fourth Year */
+    let frSliderName=[];
+    const recentJoin = document.getElementById("recent-join");
+   async function communityData(){
+      const res = await fetch("/communityData");
+      const data = await res.json();
+      console.log(data);
+      console.log(data.length);
+      recentJoin.innerHTML=`${data[data.length-1].name}<span id="department">(${data[data.length-1].department})</span><span id="year">-${data[data.length-1].year}</span>`;
+      for(let i=0;i<data.length;i++){
+        /* First Year */
+        if(data[i].year=="1st year") {
+          firstYear+=1;
+         /* imageBox.innerHTML+=`<img src="${data[i].picture}">`; */
+         fPicture.push(data[i].picture);
+         fSliderName.push(data[i].name);
+          if(data[i].department== "CS") fCS+=1;
+          else if(data[i].department=="IT") fIT+=1;
+          else if(data[i].department=="EEE") fEEE+=1;
+          else fEE+=1;
+        }
+        /* Second Year */
+        else if(data[i].year=="2nd year") {
+          secondYear+=1;
+          sPicture.push(data[i].picture);
+          sSliderName.push(data[i].name);
+          if(data[i].department== "CS") sCS+=1;
+          else if(data[i].department=="IT") sIT+=1;
+          else if(data[i].department=="EEE") sEEE+=1;
+          else sEE+=1;
+        }
+        /* Third Year */
+        else if(data[i].year=="3rd year"){ 
+          thirdYear+=1;
+          tPicture.push(data[i].picture);
+          tSliderName.push(data[i].name);
+          if(data[i].department== "CS") tCS+=1;
+          else if(data[i].department=="IT") tIT+=1;
+          else if(data[i].department=="EEE") tEEE+=1;
+          else tEE+=1;
+        }
+        /* Fourth Year */
+        else {
+          fourthYear+=1;
+          frPicture.push(data[i].picture);
+          frSliderName.push(data[i].name);
+          if(data[i].department== "CS") frCS+=1;
+          else if(data[i].department=="IT") frIT+=1;
+          else if(data[i].department=="EEE") frEEE+=1;
+          else frEE+=1;
+        }
+      }
+      totalCommunityUsers.innerHTML = data.length;
+      console.log(firstYear);
+    }
+  
+    // Calling function
+    communityData();
+   
 
+
+    /* Trigger modal on click on circles*/
+    const circleButton = document.querySelectorAll(".circle");
+    /* Modal */
+    const header = document.querySelector(".header");
+    const totalNumber = document.getElementById("totalNumber");
+    const totalF = document.getElementById("totalF");
+    const totalFCS = document.getElementById("totalFCS");
+    const totalFIT = document.getElementById("totalFIT");
+    const imageBox = document.querySelector(".image-box");
+    const sliderAction = document.querySelector(".name-feed");
+    const year=["First Year","Second Year","Third Year","Fourth Year"];
+    for(let i=0;i<circleButton.length;i++){
+     circleButton[i].addEventListener("click",(e)=>{
+      $('.ui.modal')
+      .modal('show');
+      header.innerHTML=year[i];
+      if(i==0){
+        totalNumber.innerHTML=firstYear;
+        totalF.innerHTML=firstYear;
+        totalFCS.innerHTML=fCS;
+        totalFIT.innerHTML=fIT;
+        imageBox.innerHTML="";
+        sliderAction.innerHTML="";
+        for(let j=0;j<fPicture.length;j++){
+          imageBox.innerHTML+=`<img class="img-circle" src="${fPicture[j]}">`; 
+          sliderAction.innerHTML+=`<span class="name">${j+1}.${fSliderName[j]}</span>`;
+          if(j%5==0 && j!=0) sliderAction.innerHTML+=`<br /><br />`;
+        }
+      }
+      else if(i==1){
+        totalNumber.innerHTML=secondYear;
+        totalF.innerHTML=secondYear;
+        totalFCS.innerHTML=sCS;
+        totalFIT.innerHTML=sIT;
+        imageBox.innerHTML="";
+        sliderAction.innerHTML="";
+        for(let j=0;j<sPicture.length;j++){
+          imageBox.innerHTML+=`<img class="img-circle" src="${sPicture[j]}">`; 
+          sliderAction.innerHTML+=`<span class="name">${j+1}.${sSliderName[j]}</span>`;
+          if(j%5==0 && j!=0) sliderAction.innerHTML+=`<br /><br />`;
+        }
+      }
+      else if(i==2){
+        totalNumber.innerHTML=thirdYear;
+        totalF.innerHTML=thirdYear;
+        totalFCS.innerHTML=tCS;
+        totalFIT.innerHTML=tIT;
+        imageBox.innerHTML="";
+        sliderAction.innerHTML="";
+        for(let j=0;j<tPicture.length;j++){
+          imageBox.innerHTML+=`<img class="img-circle" src="${tPicture[j]}">`; 
+          sliderAction.innerHTML+=`<span class="name">${j+1}.${tSliderName[j]}</span>`;
+          if(j%5==0 && j!=0) sliderAction.innerHTML+=`<br /><br />`;
+        }
+      }
+      else{
+        totalNumber.innerHTML=fourthYear;
+        totalF.innerHTML=fourthYear;
+        totalFCS.innerHTML=frCS;
+        totalFIT.innerHTML=frIT;
+        /* first make imageBox null so that previous entries are not added */
+        imageBox.innerHTML="";
+        sliderAction.innerHTML="";
+        for(let j=0;j<frPicture.length;j++){
+          imageBox.innerHTML+=`<img class="img-circle" src="${frPicture[j]}">`; 
+          sliderAction.innerHTML+=`<span class="name">${j+1}.${frSliderName[j]}</span>`;
+          if(j%5==0 && j!=0) sliderAction.innerHTML+=`<br /><br />`;
+        }
+      }
+     })
+  }
   </script>
 
 </body>
